--- a/style-destroyer.scss
+++ b/style-destroyer.scss
@@ -2,3 +2,15 @@
   margin: 0 !important;
   padding: 0 !important;
 }
+
+@mixin center {
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+  -webkit-box-pack: center !important;
+  -ms-flex-pack: center !important;
+  justify-content: center !important;
+  -webkit-box-align: center !important;
+  -ms-flex-align: center !important;
+  align-items: center !important;
+}
