--- a/style-destroyer.scss
+++ b/style-destroyer.scss
@@ -5,6 +5,17 @@
   vertical-align: baseline;
   line-height: 1;
 }
+
+@mixing fullwidth {
+    left: 50%;
+    margin-left: -50vw;
+    margin-right: -50vw;
+    max-width: 100vw;
+    position: relative;
+    right: 50%;
+    width: 100vw;
+}
+
  @mixin minmax-width($min, $max) {
    @if $max == single or $max == double {
      min-width: $min;
